--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,15 @@
                 <version>6.1.10</version>
             </plugin>
             
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.3</version>
+		<configuration>
+			<verbose> true </verbose>
+		</configuration>
+           </plugin>
+            
         </plugins>
     </build>
     
